[project]
name = "llma3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepspeed>=0.16.7",
    "gdown>=5.2.0",
    "huggingface-hub>=0.30.2",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "nvitop>=1.5.0",
    "unsloth==2025.3.19",
    "wandb>=0.19.10",
]
